# precision-lab

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: README.md  SUMMARY.txt  cascading.html  index.html  race.html  styles.css
docs/data/: cascade_trace.json  cascading_trace.json  fp16_trace.json  fp32_trace.json  fp64_trace.json  fp8_e4m3_trace.json
docs/js/: visualizations.js
experiments/: README.md  generate_traces.py
experiments/traces/: trace_cascading.json  trace_fp16.json  trace_fp32.json  trace_fp64.json  trace_fp8_e4m3.json
src/precision_lab/: __init__.py  cli.py
src/precision_lab/algorithms/: __init__.py  cascading.py  matrices.py  plateau_detection.py  power_method.py
src/precision_lab/data/: __init__.py  precision_types.py
src/precision_lab/visualizations/: __init__.py
tests/: test_cascading.py  test_matrices.py  test_plateau_detection.py  test_power_method.py  test_precision_types.py  test_visualization_pages.py
tests/integration/: generate_golden.py  test_trace_reproducibility.py
tests/integration/golden/: cascade_trace.json  fp16_trace.json  fp32_trace.json  fp64_trace.json  fp8_e4m3_trace.json
