[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "precision-lab"
version = "0.1.0"
description = "Exploring precision-performance tradeoffs in numerical computing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [
    { name = "Jerome Dubois", email = "jerome@dubois.pro" }
]
keywords = [
    "numerical-computing",
    "floating-point",
    "precision",
    "HPC",
    "GPU",
    "FP8",
    "mixed-precision"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]

dependencies = [
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "matplotlib>=3.9.0",
    "ml-dtypes>=0.5.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
]

[project.scripts]
precision-lab = "precision_lab.cli:app"

[project.urls]
Homepage = "https://github.com/JeromeDuboisPro/precision-lab"
Documentation = "https://jeromedubois.github.io/precision-lab"
Repository = "https://github.com/JeromeDuboisPro/precision-lab"
Issues = "https://github.com/JeromeDuboisPro/precision-lab/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/precision_lab"]

[tool.ruff]
target-version = "py313"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "NPY",    # NumPy-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["precision_lab"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ["numpy.typing.mypy_plugin"]

[[tool.mypy.overrides]]
module = [
    "matplotlib.*",
    "scipy.*",
    "ml_dtypes.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring GPU",
]

[tool.coverage.run]
source = ["src/precision_lab"]
branch = true
parallel = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
